# packages.symbolic-functor

./: LICENSE  README.md  log.txt  pyproject.toml
symbolic_functor/: function.py  function_old.py  utils.py
tests/: test_function.py
